--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
       <div>
     <footer>
-      <p>&copy; 2019 Jarisuni.info<p>
+      <p>&copy; 2019 jjarey<p>
     </footer>
   </body>
 </html>
