Updated index.html and main.css files
Updated footer link.
Updated #job & #school positioning and height.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header id="home">
       <h1>Jari Suni</h1>
       <ul class="nav">
-        <li><a href="#nav-item-1">Intro</a></li>
-        <li><a href="#nav-item-2">Background</a></li>
-        <li><a href="#nav-item-3">Accomplishments</a></li>
-        <li><a href="#nav-item-4">Contact</a></li>
+        <li><a href="#1">Intro</a></li>
+        <li><a href="#2">Background</a></li>
+        <li><a href="#3">Accomplishments</a></li>
+        <li><a href="#4">Contact</a></li>
       </ul>
     </header>
     <div class="container">
@@ -21,7 +21,7 @@
         <div class="photo">
           <img src="images/jari.png"/>
         </div>
-        <div class="intro" id="nav-item-1">
+        <div class="intro" id="1">
           <p>I'm an experienced project manager with a demonstrated history of working in the media and software industries. I'm skilled in e-commerce, digital media and marketing. I'm also a product management professional with a strong knowledge of agile methods like Scrum, Kanban and SAFe.
           </p>
           <p>Concerning my current role: I’m leading e-commerce projects for different accounts with various domains. My job is to setup a Shopify Plus store in detail while managing the project from kickoff to launch. The process is usually short but intense, and there are many projects going on side by side.
@@ -32,7 +32,7 @@
           </p>
         </div>
       </div>
-      <div class="background" id="nav-item-2">
+      <div class="background" id="2">
         <div>
           <h3>Work Experince</h3>
           <div class="cards">
@@ -84,7 +84,7 @@
           </div>
         </div>
       </div>
-      <div class="skills" id="nav-item-3">
+      <div class="skills" id="3">
         <h3>Skills</h3>
          <div>
           <img src="images/wordcloud.jpg">
@@ -117,7 +117,7 @@
           </div>
         </div>
       </div>
-      <div class="contact" id="nav-item-4">
+      <div class="contact" id="4">
         <h3>Find me online</h3>
         <div class="logos">
           <img src="images/linkedin.png">
@@ -126,7 +126,7 @@
         </div>
       <div>
     <footer>
-      <p>&copy; 2019 jjarey<p>
+      <p>&copy; 2019 <a href="#home">jjarey</a><p>
     </footer>
   </body>
 </html>
