--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   <body>
     <header id="home">
       <h1>Jari Suni</h1>
+      <!-- Mobile Navigation Menu Icon -->
+      <div class="mobile-nav-icon">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+      </div>
+      <!-- Navigation -->
       <ul class="nav">
         <li><a href="#1">Intro</a></li>
         <li><a href="#2">Background</a></li>
@@ -22,6 +29,7 @@
         <div class="photo">
           <img src="images/jari.png"/>
         </div>
+        <!-- Summary text -->
         <div class="intro" id="1">
           <p>I'm an experienced project manager with a demonstrated history of working in the media and software industries. I'm skilled in e-commerce, digital media and marketing. I'm also a product management professional with a strong knowledge of agile methods like Scrum, Kanban and SAFe.
           </p>
@@ -33,6 +41,7 @@
           </p>
         </div>
       </div>
+      <!-- Background: Work Experience -->
       <div class="background" id="2">
         <div>
           <h3>Work Experince</h3>
@@ -59,6 +68,7 @@
             </div>
           </div>
         </div>
+        <!-- Background: Education -->
         <div>
           <h3>Education</h3>
           <div class="cards">
@@ -85,6 +95,7 @@
           </div>
         </div>
       </div>
+      <!-- Skills and Certifications -->
       <div class="skills" id="3">
         <h3>Skills</h3>
          <div>
@@ -118,6 +129,7 @@
           </div>
         </div>
       </div>
+      <!-- Contact Information -->
       <div class="contact" id="4">
         <h3>Find me online</h3>
         <div class="logos">
@@ -126,8 +138,16 @@
           <img src="images/twitter.png">
         </div>
       <div>
+    <!-- Footer / Copyright -->
     <footer>
       <p>&copy; 2019 <a href="#home">jjarey</a><p>
     </footer>
+    <!-- JavaScript/jQuery Code Integration-->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous">
+    </script>
+    <script src="main.js"></script>
   </body>
 </html>
