--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <!-- Background: Work Experience -->
       <div class="background" id="2">
         <div>
-          <h3>Work Experince</h3>
+          <h3>Work Experience</h3>
           <div class="cards">
             <div class="position">
               <p id="job">Project Manager</p>
