added some-links on footer

--- a/index.html
+++ b/index.html
@@ -133,9 +133,15 @@
       <div class="contact" id="4">
         <h3>Find me online</h3>
         <div class="logos">
-          <img src="images/linkedin.png">
-          <img src="images/gmail.png">
-          <img src="images/twitter.png">
+          <a href="https://www.linkedin.com/in/jarisuni/">
+            <img src="images/linkedin.png">
+          </a>
+          <a href="mailto:jari.suni@gmail.com">
+            <img src="images/gmail.png">
+          </a>
+          <a href="https://twitter.com/jjarey">
+            <img src="images/twitter.png">
+          </a>
         </div>
       <div>
     <!-- Footer / Copyright -->
