some links fixed

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
      <meta charset="UTF-8"/>
      <meta name="viewport" content="width=device-width, initial-scale=1">
-     <title>Jari</title>
+     <meta name="author" content="jjarey">
+     <meta name="description" content="Personal resume">
      <link rel="stylesheet" type="text/css" href="main.css"/>
      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+     <title>Jari</title>
   </head>
   <body>
     <header id="home">
@@ -143,7 +145,7 @@
             <img src="images/twitter.png">
           </a>
         </div>
-      <div>
+      </div>
     <!-- Footer / Copyright -->
     <footer>
       <p>&copy; 2019 <a href="#home">jjarey</a><p>
