Added show details buttons to the cards

--- a/index.html
+++ b/index.html
@@ -52,21 +52,29 @@
               <p id="job">Project Manager</p>
               <p id="workplace">Woolman</p>
               <p id="timespan">2017–Present</p>
+              <button type="button" class="details-button">Details</button>
+              <p class="details">Lorem ipsum</p>
             </div>
             <div class="position">
               <p id="job">Product Manager</p>
               <p id="workplace">Keskisuomalainen</p>
               <p id="timespan">2014–2017</p>
+              <button type="button" class="details-button">Details</button>
+              <p class="details">Lorem ipsum</p>
             </div>
             <div class="position">
               <p id="job">Journalist</p>
               <p id="workplace">Maakunnan Sanomat</p>
               <p id="timespan">2010–2014</p>
+              <button type="button" class="details-button">Details</button>
+              <p class="details">Lorem ipsum</p>
             </div>
             <div class="position">
               <p id="job">News Assistant</p>
               <p id="workplace">SBS Finland</p>
               <p id="timespan">2009–2010</p>
+              <button type="button" class="details-button">Details</button>
+              <p class="details">Lorem ipsum</p>
             </div>
           </div>
         </div>
@@ -78,21 +86,29 @@
               <p id="school">AEL Helsinki</p>
               <p id="degree">Specialist Qualification in Product Development</p>
               <p id="timespan">2015–2017</p>
+              <button type="button" class="details-button">Details</button>
+              <p class="details">Lorem ipsum</p>
             </div>
             <div class="schooling">
               <p id="school">JAO Jyväskylä College</p>
               <p id="degree">Vocational Qualification in Business Information Technology</p>
               <p id="timespan">2009–2012</p>
+              <button type="button" class="details-button">Details</button>
+              <p class="details">Lorem ipsum</p>
             </div>
             <div class="schooling">
               <p id="school">University of Jyväskylä</p>
               <p id="degree">Master of Social Sciences</p>
               <p id="timespan">2003–2008</p>
+              <button type="button" class="details-button">Details</button>
+              <p class="details">Lorem ipsum</p>
             </div>
             <div class="schooling">
               <p id="school">Palokka High School</p>
               <p id="degree">Finnish Matriculation Examination</p>
               <p id="timespan">1998–2002</p>
+              <button type="button" class="details-button">Details</button>
+              <p class="details">Lorem ipsum</p>
             </div>
           </div>
         </div>
