Added work descriptions

--- a/index.html
+++ b/index.html
@@ -53,28 +53,28 @@
               <p id="workplace">Woolman</p>
               <p id="timespan">2017–Present</p>
               <button type="button" class="details-button">Details</button>
-              <p class="details">Lorem ipsum</p>
+              <p class="details">Currently I’m leading e-commerce projects for different accounts with various domains. My job is to setup a Shopify store in detail while managing the project from kickoff to launch.</p>
             </div>
             <div class="position">
               <p id="job">Product Manager</p>
               <p id="workplace">Keskisuomalainen</p>
               <p id="timespan">2014–2017</p>
               <button type="button" class="details-button">Details</button>
-              <p class="details">Lorem ipsum</p>
+              <p class="details">I developed digital services for newspapers. Mainly websites, sales funnel and online self-services. My main goal was to drive digital subscriptions and improve customer engagement and loyalty.</p>
             </div>
             <div class="position">
               <p id="job">Journalist</p>
               <p id="workplace">Maakunnan Sanomat</p>
               <p id="timespan">2010–2014</p>
               <button type="button" class="details-button">Details</button>
-              <p class="details">Lorem ipsum</p>
+              <p class="details">I worked as a journalist for a local newspaper called Laukaa-Konnevesi. My specialities were storytelling and photography but I loved working with layouts and videos too.</p>
             </div>
             <div class="position">
               <p id="job">News Assistant</p>
               <p id="workplace">SBS Finland</p>
               <p id="timespan">2009–2010</p>
               <button type="button" class="details-button">Details</button>
-              <p class="details">Lorem ipsum</p>
+              <p class="details">I worked as a news assistant for a local radio station called Radio Jyväskylä. My job was to write telegrams, read news online and edit stories. Sometimes I miss the excitement of live broadcasting.</p>
             </div>
           </div>
         </div>
