--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <p id="workplace">SBS Finland</p>
               <p id="timespan">2009–2010</p>
               <button type="button" class="details-button">Details</button>
-              <p class="details">I worked as a news assistant for a local radio station called Radio Jyväskylä. My job was to write telegrams, read news online and edit stories. Sometimes I miss the excitement of live broadcasting.</p>
+              <p class="details">I worked as a news assistant for a local radio station called Radio Jyväskylä. My job was to write telegrams, read news on-air and edit stories. Sometimes I miss the excitement of live broadcasting.</p>
             </div>
           </div>
         </div>
