Added education details

--- a/index.html
+++ b/index.html
@@ -87,28 +87,28 @@
               <p id="degree">Specialist Qualification in Product Development</p>
               <p id="timespan">2015–2017</p>
               <button type="button" class="details-button">Details</button>
-              <p class="details">Lorem ipsum</p>
+              <p class="details">During this education I specialized in agile methodologies, productization and service design. As an example, I really enjoyed the study module about usability testing. I also improved my competence on project budgeting and financing.</p>
             </div>
             <div class="schooling">
               <p id="school">JAO Jyväskylä College</p>
               <p id="degree">Vocational Qualification in Business Information Technology</p>
               <p id="timespan">2009–2012</p>
               <button type="button" class="details-button">Details</button>
-              <p class="details">Lorem ipsum</p>
+              <p class="details">My professional education consisted of three areas of expertise: entrepreneurship, system development and digital communications. As an example, I studied accounting, web development (HTML, CSS, SQL) and tools like Photoshop and InDesign.</p>
             </div>
             <div class="schooling">
               <p id="school">University of Jyväskylä</p>
               <p id="degree">Master of Social Sciences</p>
               <p id="timespan">2003–2008</p>
               <button type="button" class="details-button">Details</button>
-              <p class="details">Lorem ipsum</p>
+              <p class="details">My major was philosophy, long minor was political science, and minors were sociology and journalism. I wrote my master’s thesis about the politics of memory, and got graded with eximia cum laude approbatur. I participated in the Erasmus exchange programme in Poland.</p>
             </div>
             <div class="schooling">
               <p id="school">Palokka High School</p>
               <p id="degree">Finnish Matriculation Examination</p>
               <p id="timespan">1998–2002</p>
               <button type="button" class="details-button">Details</button>
-              <p class="details">Lorem ipsum</p>
+              <p class="details">The Matriculation Examination is a national examination based on the syllabus of the Finnish upper secondary school. On my part this consisted of five tests: Finnish (mother tongue), English, humanities, mathematics, and Swedish (second national language).</p>
             </div>
           </div>
         </div>
