minor text changes

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <p id="degree">Specialist Qualification in Product Development</p>
               <p id="timespan">2015–2017</p>
               <button type="button" class="details-button">Details</button>
-              <p class="details">During this education I specialized in agile methodologies, productization and service design. As an example, I really enjoyed the study module about usability testing. I also improved my competence on project budgeting and financing.</p>
+              <p class="details">During this education I specialized in agile methodologies, productization and service design. I really enjoyed the studies about usability testing. I also improved my competence on IPR rights, project budgeting and financing.</p>
             </div>
             <div class="schooling">
               <p id="school">JAO Jyväskylä College</p>
