added links to certifications

--- a/index.html
+++ b/index.html
@@ -122,17 +122,17 @@
             <div>
               <h4>Inbound Certified</h4>
               <p>HubSpot Academy</p>
-              <a href="">See certificate</a>
+              <a href="https://www.dropbox.com/s/oq6581hqm3nvyav/hubspot-inbound.pdf?dl=0">See certificate</a>
             </div>
             <div>
               <h4>Google Analytics IQ</h4>
               <p>Google</p>
-              <a href="">See certificate</a>
+              <a href="https://skillshop.exceedlms.com/profiles/77c8c0455bdb4c4c90529a2c97340e7d">See certificate</a>
             </div>
             <div>
               <h4>SAFe 4 Certified Agilist</h4>
               <p>Scaled Agile, Inc.</p>
-              <a href="">See certificate</a>
+              <a href="https://www.dropbox.com/s/e4qclgvnarwhl8y/SAFe%202020.pdf?dl=0">See certificate</a>
             </div>
             <div>
               <h4>Product Fundamentals Certification</h4>
@@ -142,7 +142,7 @@
             <div>
               <h4>Certified ScrumMaster</h4>
               <p>Scrum Alliance</p>
-              <a href="">See certificate</a>
+              <a href="https://www.scrumalliance.org/community/profile/jsuni3">See certificate</a>
             </div>
           </div>
         </div>
