--- a/index.html
+++ b/index.html
@@ -53,28 +53,28 @@
               <p id="workplace">Woolman</p>
               <p id="timespan">2017–Present</p>
               <button type="button" class="details-button">Details</button>
-              <p class="details">Currently I’m leading e-commerce projects for different accounts with various domains. My job is to setup a Shopify store in detail while managing the project from kickoff to launch.</p>
+              <p class="details">Currently I’m leading e-commerce projects for different accounts with various domains. My job is to setup a Shopify store in detail while managing the project from kickoff to launch. I'm also responsible for developing our project management processes and practices as the company grows.</p>
             </div>
             <div class="position">
               <p id="job">Product Manager</p>
               <p id="workplace">Keskisuomalainen</p>
               <p id="timespan">2014–2017</p>
               <button type="button" class="details-button">Details</button>
-              <p class="details">I developed digital services for newspapers. Mainly websites, sales funnel and online self-services. My main goal was to drive digital subscriptions and improve customer engagement and loyalty.</p>
+              <p class="details">I developed digital services for newspapers such as Keskisuomalainen, Savon Sanomat and Iisalmen Sanomat. Mainly websites, sales funnel and online self-services. My main goal was to drive digital subscriptions and improve customer engagement and loyalty.</p>
             </div>
             <div class="position">
               <p id="job">Journalist</p>
               <p id="workplace">Maakunnan Sanomat</p>
               <p id="timespan">2010–2014</p>
               <button type="button" class="details-button">Details</button>
-              <p class="details">I worked as a journalist for a local newspaper called Laukaa-Konnevesi. My specialities were storytelling and photography but I loved working with layouts and videos too.</p>
+              <p class="details">I worked as a journalist for a local newspaper called Laukaa-Konnevesi. My specialities were storytelling and photography but I loved working with layouts and videos too. I was also responsible for developing digital products such as local mobile news and epaper.</p>
             </div>
             <div class="position">
               <p id="job">News Assistant</p>
               <p id="workplace">SBS Finland</p>
               <p id="timespan">2009–2010</p>
               <button type="button" class="details-button">Details</button>
-              <p class="details">I worked as a news assistant for a local radio station called Radio Jyväskylä. My job was to write telegrams, read news on-air and edit stories. Sometimes I miss the excitement of live broadcasting.</p>
+              <p class="details">I worked as a news assistant for a local radio station called Radio Jyväskylä. My job was to make interviews, write telegrams, read news on-air and edit stories. Sometimes I miss the excitement of live broadcasting.</p>
             </div>
           </div>
         </div>
@@ -101,14 +101,14 @@
               <p id="degree">Master of Social Sciences</p>
               <p id="timespan">2003–2008</p>
               <button type="button" class="details-button">Details</button>
-              <p class="details">My major was philosophy, long minor was political science, and minors were sociology and journalism. I wrote my master’s thesis about the politics of memory, and got graded with eximia cum laude approbatur. I participated in the Erasmus exchange programme in Poland.</p>
+              <p class="details">My major was philosophy, long minor was political science, and minors were sociology and journalism. I wrote my master’s thesis about the politics of memory, and got graded with <i>eximia cum laude approbatur</i>. I participated in the Erasmus exchange programme in Poland.</p>
             </div>
             <div class="schooling">
               <p id="school">Palokka High School</p>
               <p id="degree">Finnish Matriculation Examination</p>
               <p id="timespan">1998–2002</p>
               <button type="button" class="details-button">Details</button>
-              <p class="details">The Matriculation Examination is a national examination based on the syllabus of the Finnish upper secondary school. On my part this consisted of five tests: Finnish (mother tongue), English, humanities, mathematics, and Swedish (second national language).</p>
+              <p class="details">A national examination based on the syllabus of the Finnish upper secondary school. On my part this consisted of five tests: Finnish (mother tongue), English, humanities, mathematics, and Swedish (second national language).</p>
             </div>
           </div>
         </div>
